--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- js files -->
       <script src="js/dom.js"></script>
-      <script src="js/css.js"></script>
+      <script src="js/style.js  "></script>
       <script src="js/object.js"></script>
       <script src="js/alerte.js"></script>
       <script src="js/createbricks.js"></script>
@@ -78,7 +78,6 @@
       <script src="js/otherFunction.js"></script>
       <script src="js/index.js"></script>
       <script src="js/movePlayer.js"></script>
-
 </body>
 </html>
  
