change vitesse ball sur les petits ecran

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2p0T-r4pTdjFEnObJS8xSM9FHJPTLbqA8Ew&usqp=CAU" type="image/x-icon">
     <title>MakeYOurGame/BrickBreaker</title>
 
 </head>
